[gd_scene load_steps=13 format=2]

[ext_resource path="res://Src/Player/PlayerCollisionLeg1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Src/Player/PlayerController.gd" type="Script" id=2]
[ext_resource path="res://Src/Player/Recorder.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/playback.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/record.png" type="Texture" id=5]
[ext_resource path="res://Src/Player/PlayerGraphics.tscn" type="PackedScene" id=6]
[ext_resource path="res://Src/Player/PlayerClone/PlayerClone.tscn" type="PackedScene" id=7]
[ext_resource path="res://Src/Player/PlayerCollisionBody.tscn" type="PackedScene" id=8]
[ext_resource path="res://Src/Player/PlayerCollisionLeg2.tscn" type="PackedScene" id=9]
[ext_resource path="res://Src/Player/PlayerCamera.gd" type="Script" id=10]
[ext_resource path="res://Assets/Sprites/Rewind.png" type="Texture" id=11]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0

[node name="Player" type="RigidBody2D" groups=[
"Player",
]]
collision_layer = 2
collision_mask = 3
mode = 2
mass = 1.5
physics_material_override = SubResource( 1 )
contacts_reported = 5
script = ExtResource( 2 )

[node name="Recorder" type="Node2D" parent="."]
position = Vector2( 0, -115 )
script = ExtResource( 3 )
PlayerClone = ExtResource( 7 )

[node name="RecordingState" type="Sprite" parent="Recorder"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="PlayingState" type="Sprite" parent="Recorder"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="LoopingState" type="Sprite" parent="Recorder"]
position = Vector2( 0, -29 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="PlayerGraphics" parent="." instance=ExtResource( 6 )]

[node name="PlayerCollisionBody" parent="." instance=ExtResource( 8 )]

[node name="PlayerCollisionLeg2" parent="." instance=ExtResource( 9 )]

[node name="PlayerCollisionLeg1" parent="." instance=ExtResource( 1 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -120 )
current = true
smoothing_speed = 2.0
script = ExtResource( 10 )
